--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
       type="image/jpg"
       href="./assets/INDIA_logo copy.png"
     />
+    <script type="text/javascript" defer src="./subscribe.js"></script>
+    <!-- Start of HubSpot Embed Code -->
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js-eu1.hs-scripts.com/24879597.js"
+    ></script>
+    <!-- End of HubSpot Embed Code -->
   </head>
   <!---------------------------------------------------------------------------------------------------------------------------->
   <body>
@@ -200,15 +210,5 @@
     <!---------------------------------------------------------------------------------------------------------------------------->
 
     <script type="text/javascript" src="./nav.js"></script>
-
-    <!-- Start of HubSpot Embed Code -->
-    <script
-      type="text/javascript"
-      id="hs-script-loader"
-      async
-      defer
-      src="//js-eu1.hs-scripts.com/24879597.js"
-    ></script>
-    <!-- End of HubSpot Embed Code -->
   </body>
 </html>
