--- a/index.html
+++ b/index.html
@@ -91,26 +91,28 @@
       <div class="main-feature-container">
         <div class="feature-intro">
           <h2>Our mission & vision</h2>
-          <p>Fund. Scale. Accelerate.</p>
+          <p>
+            Combining global strengths with deep tech talent in Emerging Asia.
+          </p>
         </div>
 
         <div class="features">
           <div class="feature-list">
-            <img class="feature-icon" src="./assets/2.png" alt="trophy" />
+            <img class="feature-icon" src="./assets/1.png" alt="trophy" />
             <div class="feature-intro-wrapper">
               <h3>Series B Growth Fund</h3>
             </div>
           </div>
 
           <div class="feature-list">
-            <img class="feature-icon" src="./assets/1.png" alt="trophy" />
+            <img class="feature-icon" src="./assets/2.png" alt="trophy" />
             <div class="feature-intro-wrapper">
               <h3>Globally Experienced Team</h3>
             </div>
           </div>
 
           <div class="feature-list">
-            <img class="feature-icon" src="./assets/3.png" alt="trophy" />
+            <img class="feature-icon" src="./assets/4.png" alt="trophy" />
             <div class="feature-intro-wrapper">
               <h3>Value Accelerator</h3>
             </div>
@@ -124,15 +126,16 @@
     <div class="ukfmb-insights">
       <div class="main-container-content">
         <div class="main-section-left">
-          <h2 class="content-title">Discover UKFMB Insights</h2>
+          <h2 class="content-title">Fund. Scale. Accelerate.</h2>
           <p class="hero-intro-content">
-            Learn and get inspired weekly with access to short and insightful
-            content
+            Committed to ethical & responsible investments in iconic,
+            fast-growing businesses which steer to bring positive impact to our
+            communities and culture, leveraging technology.
           </p>
           <div class="content-features">
-            <p>🍪 Bite-sized insightful Snapshots on industry and economy.</p>
-            <p>👍 Soundbites on everything that affects business and family.</p>
-            <p>🧠 Short Sessions with industry experts on family business.</p>
+            <p class="required">Iconic Investments.</p>
+            <p class="required">Global on Ground Teams</p>
+            <p class="required">ESG Integration.</p>
           </div>
 
           <div class="susbscribe-success" id="subscribe-success">
@@ -148,14 +151,14 @@
               required
             />
             <button type="submit" class="subscribe" id="subscribe">
-              Subscribe
+              Learn More →
             </button>
           </form>
         </div>
 
         <div class="main-section-right-content">
           <img
-            src="./assets/ukfmb mockup.png"
+            src="./assets/Venn Diagram.png"
             alt="main"
             class="hero-image-insights"
           />
@@ -179,7 +182,8 @@
 
         <div class="feature-list-footer">
           <ul class="footer-items">
-            <h1 class="footer-items-heading">Company</h1>
+            <h1 class="footer-items-heading">Social</h1>
+            <img src="./assets/linkedin.png" alt="logo" class="social-links" />
           </ul>
         </div>
       </div>
