changes to form

--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
         <button class="hamburger" id="hamburger">
           <img src="./assets/icons8-menu.svg" />
         </button>
-
-        <ul class="nav-list" id="nav-list">
-          <a href="./aartha">
-            <button class="hero-button">Learn More</button>
-          </a>
-        </ul>
       </div>
     </header>
     <!---------------------------------------------------------------------------------------------------------------------------->
@@ -139,7 +133,7 @@
           </div>
 
           <div class="susbscribe-success" id="subscribe-success">
-            <p>Thank you for subscribing.</p>
+            <p>Thank you, We'll get back to you soon.</p>
           </div>
 
           <form action="/" id="form">
@@ -150,8 +144,9 @@
               placeholder="Please enter your email"
               required
             />
-            <button type="submit" class="subscribe" id="subscribe">
-              Learn More →
+
+            <button type="submit" class="signup" id="subscribe">
+              Find Out More →
             </button>
           </form>
         </div>
