--- a/index.html
+++ b/index.html
@@ -19,16 +19,6 @@
       type="image/jpg"
       href="./assets/INDIA_logo copy.png"
     />
-    <script type="text/javascript" defer src="./subscribe.js"></script>
-    <!-- Start of HubSpot Embed Code -->
-    <script
-      type="text/javascript"
-      id="hs-script-loader"
-      async
-      defer
-      src="//js-eu1.hs-scripts.com/24879597.js"
-    ></script>
-    <!-- End of HubSpot Embed Code -->
   </head>
   <!---------------------------------------------------------------------------------------------------------------------------->
   <body>
@@ -69,7 +59,7 @@
             />
 
             <button type="submit" class="signup" id="subscribe">
-              Find Out More →
+              Let's Connect →
             </button>
           </form>
         </div>
@@ -136,7 +126,7 @@
             <p>Thank you, We'll get back to you soon.</p>
           </div>
 
-          <form action="/" id="form">
+          <form action="" id="form">
             <input
               type="email"
               id="email"
@@ -146,7 +136,7 @@
             />
 
             <button type="submit" class="signup" id="subscribe">
-              Find Out More →
+              Let's Connect →
             </button>
           </form>
         </div>
@@ -186,5 +176,15 @@
     <!---------------------------------------------------------------------------------------------------------------------------->
 
     <script type="text/javascript" src="./nav.js"></script>
+    <script type="text/javascript" defer src="./subscribe.js"></script>
+    <!-- Start of HubSpot Embed Code -->
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js-eu1.hs-scripts.com/24879597.js"
+    ></script>
+    <!-- End of HubSpot Embed Code -->
   </body>
 </html>
