--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
             <p>Thank you, We'll get back to you soon.</p>
           </div>
 
-          <form action="" id="form">
+          <form
+            action="https://shu8hampanwar.github.io/OpenheartsFund/"
+            id="form"
+          >
             <input
               type="email"
               id="email"
